# wgpu-game-of-life

./: .gitignore  Cargo.toml  Makefile  README.md  build.gradle  build.gradle.kts
.github/workflows/: ci.yml  pull_request.yml
app/: build.gradle  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: styles.xml
benches/: benchmark.rs
site/: eslint.config.js  index.html  index.js  package-lock.json  package.json  resize.js  webpack.config.js
site/static/: manifest.json
src/: android.rs  compute_shader.wgsl  computer.rs  event_loop.rs  game-of-life.compute.wgsl  game-of-life.render.wgsl  lib.rs  main.rs  renderer.rs  rules.rs  second-shader.wgsl  shader.wgsl  web.rs
