[package]
name = "wgpu-game-of-life"
version = "0.1.0"
edition = "2021"
description = "Wgpu game of life"
license = "MIT"
repository = "https://github.com/fornwall/wgpu-game-of-life"
keywords = ["wgpu", "webgpu", "wgsl"]
categories = ["graphics"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bytemuck = { version = "*", features = ["derive"] }
env_logger = "*"
log = "*"
instant = { version = "*", features = ["wasm-bindgen"] }
pollster = "*"
rand = "*"
rand_chacha = "*"
wgpu = { git = "https://github.com/gfx-rs/wgpu", branch = "trunk" }
#winit = { git = "https://github.com/rust-windowing/winit/", branch = "master", features = [ "android-native-activity", ] }
winit = { git = "https://github.com/fornwall/winit/", branch = "axis-update-on-android", features = [ "android-native-activity", ] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "*"
jni = "*"
gamepads = { git = "https://github.com/fornwall/gamepads", features = ["android-winit"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
getrandom = { version = "*", features = ["js"] }
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = ["Document", "Element", "Window"] }
js-sys = "*"

[dev-dependencies]
criterion = { version = "*", default-features = false, features = [] }

[[bench]]
name = "benchmark"
harness = false

[package.metadata.bundle]
name = "Game of Life"
identifier = "net.fornwall.wgpugameoflife"
version = "0.1.0"
resources = ["assets", "images/**/*.png"]
copyright = "Copyright (c) Fredrik Fornwall 2023. All rights reserved."
category = "Developer Tool"
short_description = "An example wgpu application."
long_description = """
An example wgpu application running game of life.
Se https://github.com/fornwall/wgpu-game-of-life.
"""
